--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es-ar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flysoft React UI</title>
     <link rel="stylesheet" href="/fontawesome/css/all.min.css" />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
